	Made HexagonalPortrayal2D consistent in constructors with other similar portrayals
	Minor hash improvements to [Mutable]Double[2|3]D
	Bug fix in StableDouble3D: it wasn't copying z properly.
	Edge now indicates its info in its toString() method.
	New method called getTitle() added to Inspector, intended to be overridden by inspectors
		which are in free-floating windows.  makeFrame() is reduced to just Inspector.
		This is all intended to make most inspectors properly display their titles
		when free-floating.
	Cleared Vector3d out of Agent.java in crowd3d; using Mutable3D instead
	Major modifications to Shape3D/Sphere/Cone/CylinderPortrayal3D.  We've moved them
		all under a new superclass called PrimitivePortrayal3D and have completely
		cleaned them out and made them consistent.  A new facility has been created
		with a lot of helpful methods to make it easy to transform (rotate, scale)
		them and change their appearance dynamically.  Thanks to Joerg Hoehne
		(hoehne@gmail.com) for the nudging.  Further modification of other classes
		will follow (like CubePortrayal3D and the various edge classes).
	Added a brand new BoxPortrayal3D (based on java3d's Box), extending PrimitivePortrayal3D.
	Balls3D's BallPortrayal class has been radically simplified and can do cool things
		now to show off the modifications in the various shapes above.
	Updated Tutorial5 and balls3d to both force collision checks when the balls are
		being created so the initial screenshot is prettier (has proper colors in it).
	Reindented
	Changed calls to cloneNode() into calls to cloneTree() in certain 3D portrayals;
		cloneNode() is supposedly pseudoprivate.
	Slightly revised setSelected() procedure for 3D objects.  Still suboptimal though.
		See documentation on the method in SimplePortrayal3D.
	Added a HowTo
	Bug fix to Shape3D: added an appearance now
	Bug fix to CubePortrayal3D on pickability. 
		(although we might soon replace the class with BoxPortrayal3D).